@@ -1,6 +1,5 @@
 <?php
 define('IN_WA_FORM', true);
-define('WA_ROOTDIR', 'http://rhodiabasket.fr/NEWSLETTER');
 
-include WA_ROOTDIR . '/newsletter.php';
+require_once 'https://rhodiabasket.fr/NEWSLETTER/newsletter.php';
 ?>
