@@ -1,3 +1,4 @@
-<div >
-	<iframe class="col-lg-12" style="height: 1000px" src="img/affiche1.pdf" ></iframe>
+<div>
+	<h2>[PASSE] Matinée Diots</h2>
+	<iframe class="col-lg-12" style="height: 780px" src="img/affiche1.pdf" ></iframe>
 </div>
